# META_FRONTEND

./: .dockerignore  .env.example  Dockerfile  README.md  inference.py  openenv.yaml  package-lock.json  package.json  pyproject.toml  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
backend/: baseline_agent.py  env.py  get_scores.py  graders.py  main.py  models.py  openai_baseline.py  real_data.py  requirements.txt
server/: app.py
src/: App.tsx  index.css
src/components/: DatabasePanel.tsx  GlobalDashboard.tsx  Interface.tsx  MissionsPanel.tsx  Satellites.tsx
