[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "antariksh-rl"
version = "0.2.0"
description = "Satellite Scheduling RL Environment for OpenEnv"
authors = [
    { name = "Ashish Kumar" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "openai",
    "openenv-core>=0.2.0"
]
requires-python = ">=3.10"

[project.scripts]
start = "server.app:app"

[tool.setuptools]
packages = ["server"]
